vk ennen mergeä

--- a/tex/ilmari_references.bib
+++ b/tex/ilmari_references.bib
@@ -260,3 +260,10 @@ title={VDE-AR-N 4100 Anwendungsregel:2019-04},
 url={https://www.vde.com/en/fnn/topics/technical-connection-rules/technical-connection-rules-for-low-voltage},
 type = {Standard}
 }
+
+@online {katriVala,
+title = {Katri Valan lämpöpumppulaitos},
+organization = {Helen Oy},
+url = {https://www.helen.fi/helen-oy/energia/energiantuotanto/voimalaitokset/katri-vala},
+urldate = {2020-08-29}
+}
