Added anti-islanding protection

--- a/tex/sidosryhmat.tex
+++ b/tex/sidosryhmat.tex
@@ -1,7 +1,9 @@
 Luonnollisesti eri sidosryhmät ovat kiinnostuneet erilaisiin käyttötarkoituksiin soveltuvista rajapinnoista. Osa sidosryhmistä on kiinnostunut vain datan lukemiseen tarkoitetusta rajapinnasta käyttäen sitä esimerkiksi käyttövarmuuden ja tuoton tilastointiin, kun taas osa on kiinnostunut järjestelmien etähallinnasta esimerkiksi verkon joustavuuden parantamiseksi.
 
 \section{Kantaverkkoyhtiö Fingrid}
-  Suomen kantaverkkoyhtiönä Fingrid asettaa vaatimuksia siihen liittyen, mitä rajapintoja järjestelmien on sisällettävä. Se vaatii alle 1MW järjestelmien (voimalaitosten) sisältämään logiikkaportin, jonka kautta saapuvalla käskyllä voimalaitoksen on lopetettava pätötehon tuotanto viiden sekunnin kuluessa. Yli 1MW:n suuruiset järjestelmät tulee taas varustaa väyläliitännällä, jolla voidaan alentaa tuotannon pätötehoa annetun ohjearvon mukaisesti. Tämän liitännän on oltava yhteensopiva IEC60870-6, IEC60870-5 tai IEC61850 -protokollan kanssa. \parencite{VJV2018}
+  Suomen kantaverkkoyhtiönä Fingrid asettaa vaatimuksia siihen liittyen, mitä rajapintoja järjestelmien on sisällettävä. Se vaatii alle 1MW järjestelmien (voimalaitosten) sisältämään logiikkaportin, jonka kautta saapuvalla käskyllä voimalaitoksen on lopetettava pätötehon tuotanto viiden sekunnin kuluessa. Yli 1MW:n suuruiset järjestelmät tulee taas varustaa väyläliitännällä, jolla voidaan alentaa tuotannon pätötehoa annetun ohjearvon mukaisesti. Tämän liitännän on oltava yhteensopiva IEC60870-6, IEC60870-5 tai IEC61850 -protokollan kanssa. Fingrid ei dokumentissaan kuitenkaan ilmoita, täytyykö tämän liitännän olla käytössä, vai riittääkö että järjestelmässä on liitäntä olemassa. \parencite{VJV2018}
+
+  Mikäli Fingridin voimajohtoon liitettävä voimalaitos on yli 1MW:n tehoinen, se on varustettava eroonkytkentäreleistyksellä. Yli 5MW:n tehoinen voimalaitos vaatii lisäksi eroonkytkennän viestiyhteyden pikajälleenkytkentöjen toiminnan varmistamiseksi. Jos taas voimalaitos liittyy suoraan tai Fingridin asiakkaan verkon kautta kantaverkon kytkinkenttään, ei eroonkytkentäreleistystä vaadita. Tahattoman saarekekäytön estäminen on joissain inverttereissä integroituna, jolloin ne tarkkailevat verkon tilaa ja huomattuaan saarekkeen muodostumisen, kytkeytyvät irti. Tällöin alle 5MW:n järjestelmät eivät tarvitse erillisiä laitteistoja eroonkytkentään, vaan invertteri toteuttaa itsessään jo tämän vaatimuksen. 
 
   Yli 10MW:n järjestelmien kohdalla Fingridin Kantaverkkokeskus voi tarvittaessa pyytää järjestelmän käytöstä vastaavaa toimijaa muuttamaan pätö- tai loistehosäädön asettelu-arvoja voimalaitosteknologian asettamissa rajoissa \parencite{VJV2018}. Fingrid ei täten ota kantaa siihen, miten tämä säätäminen tapahtuu. Fingridin tarpeet järjestelmien rajapinnoista rajoittuvat siten erityistilanteissa järjestelmän alasajoon tai sen tehonsäätöön käytöstä vastaavan toimijan kautta.
 
