--- a/tex/sidosryhmat.tex
+++ b/tex/sidosryhmat.tex
@@ -32,9 +32,15 @@ Luonnollisesti eri sidosryhmät ovat kiinnostuneet erilaisiin käyttötarkoituks
     \item muiden järjestelmien integraatio
   \end{itemize}
 
-  Järjestelmän omistajan eli usein käyttäjän suorittama järjestelmän monitorointi voidaan toteuttaa muutamilla eri tavoilla. Järjestelmän toiminnasta kiinnostuneempi käyttäjä saattaa rakentaa sen rajapintoja hyödyntävää kotiautomaatioa ja monitorointia. Monitorointi ja ohjaus toteutetaan usein fyysisen käyttöliittymän avulla ja mikäli nämä toiminnallisuudet halutaan myös etänä, on käyttöliittymä helposti tuotavissa laitevalmistajan tarjoamaan pilvipalveluun tai mobiilisovellukseen.
+  Järjestelmän omistajan eli usein käyttäjän suorittama järjestelmän monitorointi voidaan toteuttaa muutamilla eri tavoilla. Monitorointi ja ohjaus toteutetaan usein fyysisen käyttöliittymän avulla ja mikäli nämä toiminnallisuudet halutaan myös etänä, on käyttöliittymä helposti tuotavissa laitevalmistajan tarjoamaan pilvipalveluun tai mobiilisovellukseen. Mikäli valmistaja ei kuitenkaan tarjoa etämonitorointiin sovelluksia, on sellainen usein mahdollista tehdä itse, mikäli osaaminen riittää aiheeseen.
 
-  Integroimalla lämpöpumppu ja aurinkosähköinvertteri taloautomaatioon saavutetaan hyötyjä. Automaation avulla lämpöpumpun käyntijaksojen aiheuttamia tehopiikkejä voidaan kompensoida aurinkosähköinvertterin avulla ja näin vähentää sähkönsiirron kustannuksia sekä parantaa jännitteen laatua heikoissa sähköverkoissa.
+  Omistaja voi olla kiinnostunut myös erilaisista energiaa säästävistä ohjaustoiminnoista, hyvä esimerkki tästä on "poissa kotoa" -toiminto, jolla saadaan lämpötilaa laskettua mikäli kiinteistö on tyhjillään pidemmän aikaa. Tämä luonnollisesti laskee myös lämmityskustannuksia.
+
+\section{Kiinteistö}
+  Kiinteistö voidaan ajatella yhtenä sidosryhmänä, joka on hyvin sidoksissa järjestelmän omistajaan.  Tämä johtuu sitä, että omistaja voi ohjata kiinteistöautomaation kautta muitakin laitteita, kuin vain lämpöpumppua tai aurinkosähköjärjestelmää. Tällöin järjestelmä voi säädellä automaattisesti kiinteistön energiatasapainoa, tai siirtää varaavan lämmityksen kulutus halvemmille tunneille.
+
+  Kiinteistöautomaation avulla lämpöpumpun käyntijaksojen aiheuttamaa kiinteistön kuormitusta voidaan kompensoida aurinkosähköinvertterin avulla ja näin vähentää sähkönsiirron kustannuksia sekä parantaa jännitteen laatua heikoissa sähköverkoissa. Automaatiolla voidaan ajoittaa lämpöpumppujen kuormittavin jakso aurinkosähkön tuotantoaikaan, jolloin kiinteistön ottama kuorma verkosta pienenee. Tällä on kiinteistön energiakustannusten kannalta merkitystä erityisesti, jos käytössä on tehotariffi. Tällainen automaatio voi parhaassa tapauksessa mahdollistaa tehotariffissa määritellyn huipputehon pienentämisen kausittain.
+
 
 \section{Järjestelmätoimittaja}
   \begin{itemize}
