--- a/tex/sovellukset.tex
+++ b/tex/sovellukset.tex
@@ -20,7 +20,7 @@ Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai ni
 
   Kun lämpöpumppua pystytään monitoroinnin lisäksi myös ohjaamaan etänä, puhutaan etähallinnasta. Toisin kuin pelkästä monitoroinnista, lämpöpumpun etähallinnasta saattaa olla enemmän käytännön hyötyä myös omakotitaloasujalle. Etähallinnalla voidaan saavuttaa energian säästöä eri tavoilla. Etähallinta mahdollistaa muunmuassa matalamman sisälämpötilan ylläpitämisen asukkaiden ollessa poissa, minkä jälkeen voidaan nostaa asunnon lämpötilaa juuri ennen asukkaiden paluuta kotiin. Kesällä sama periaate pätee jäähdytykseen, mikäli käytettävä lämpöpumppu toimii myös jäähdyttävänä järjestelmänä. Tälläistä saatetaan kutsua esimerkiksi lomatoiminnoksi. Etähallintasovelluksesta on myöskin helppo tehdä intuitiivinen käyttää, koska käyttöliittymä voidaan tuoda kiinteästi lämpöpumpun yhteyteen asennetuista sulautetuista käyttöliittymistä käyttäjän omalle laitteelle.
 
-  Aurinkosähköjärjestelmän etähallinnalla ei kotitalouksissa ole tarvetta, sillä järjestelmä on suunniteltu toimimaan jatkuvasti parhaalla tuotolla. Etähallinnasta voi tosin olla kiinnostunut tulevaisuudessa verkonhaltija, sillä se voi tällöin rajoittaa maksimitehoa tai muuttaa esimerkiksi sen käyttäytymistä eri jännite- tai taajuusalueilla. Lisäksi se voi pakottaa koko järjestelmän pysäyttämisen. Tällä hetkellä verkonhaltijan etäkäytön estää oikeastaan puuttuvat järjestelmäintegraatiot, sillä nykyisiin energiamittareihin ei ole integroitu kommunikaatiota ulkoisille laitteille. Aurinkoinverttereiden integrointi verkonhaltijan \gls{SCADA}-järjestelmään on toki mahdollista, mutta se on järkevää vain suuremmissa järjestelmissä nykyisillä standardeilla, sillä verkonhaltijalla ei ole kaksisuuntaista kommunikaatiota kotitalouksiin ennestään. 
+  Aurinkosähköjärjestelmän etähallinnalla ei kotitalouksissa ole tarvetta, sillä järjestelmä on suunniteltu toimimaan jatkuvasti parhaalla tuotolla. Etähallinnasta voi tosin olla kiinnostunut tulevaisuudessa verkonhaltija, sillä se voi muuttaa esimerkiksi sen käyttäytymistä eri jännite- tai taajuusalueilla, tai pakottaa koko järjestelmän pysäyttämisen esimerkiksi verkon huoltotöiden ajaksi. Tällä hetkellä verkonhaltijan etäkäytön estää oikeastaan puuttuvat järjestelmäintegraatiot, sillä nykyisiin energiamittareihin ei ole integroitu kommunikaatiota ulkoisille laitteille. Aurinkoinverttereiden integrointi verkonhaltijan \gls{SCADA}-järjestelmään on toki mahdollista, mutta se on järkevää vain suuremmissa järjestelmissä nykyisillä standardeilla, sillä verkonhaltijalla ei ole kaksisuuntaista kommunikaatiota kotitalouksiin ennestään. 
 
   Kommunikointi lämpöpumpun ja asiakkaan päätelaitteen, joka voi olla esimerkiksi puhelin tai tietokone, voi tapahtua monella erilaisella tavalla. Monet lämpöpumppuvalmistajat tarjoavat lämpöpumppuihinsa lisäpalveluna etäohjaustoiminnallisuutta, joka näyttäytyy käyttäjälle esimerkiksi mobiilisovelluksena tai selaimessa käytettävänä verkkosovelluksena. Lämpöpumpputoimittajan tarjoamissa ratkaisuissa ei vaadita käyttäjältä yleensä sen suuryttäjälle esimerkiksi mobiilisovelluksena tai selaimessa käytettävänä verkkosovelluksena. Lämpöpumpputoimittajan tarjoamissa ratkaisuissa ei vaadita käyttäjältä yleensä sen suurempaa perehtymistä tai asiantuntemusta. Toimittaja saattaa myös tarjota valmiita ratkaisuja lämpöpumpun integroimiseen taloautomaation kanssa.
 
@@ -28,7 +28,7 @@ Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai ni
 
   Yksittäisen lämpöpumpun ohjauksella saavutettavat hyödyt ovat lähinnä yksittäisen omakotitalokäyttäjän saavuttamia säästöjä tai vastaavasti teollisuudessa tapahtuvaa järjestelmien hallinnasta saavutettavia etuja. Merkittävämmät lämpöpumppujen rajapintoja hyödyntävät sovellukset koskevat hyödyt saavutetaan, kun ohjattavia lämpöpumppuja on useampia.
 
-\section{kysyntäjousto}
+\section{Kysyntäjousto}
 
   Normaalissa keskitetyssä sähköenergiajärjestelmässä sähkötehon kulutus vaihtelee muunmuassa vuodenajan, vuorokaudenajan ja sään mukaan. Valmistava suurteollisuus, eli metsä-, metalli- ja kemianteollisuus, kuluttaa noin \SI{40}{\percent} Suomessa käytetystä sähköstä Tästä johtuen teollisuuden prosessien tila saattaa vaikuttaa merkittävästi järjestelmän tehonkulutukseen\parencite{SVTehk}. Sähköverkosta otetun ja siihen syötetyn tehon pitää jatkuvasti olla yhtä suuret, minkä takia tuotantotehoa pitää säätää. Perinteisessä järjestelmässä tehonkulutuksen muutoksia ennakoidaan ja tehontuotantoa säädellään ajamalla esimerkiksi lauhde- ja \gls{CHP}-voimaloita tietyn suunnitelman mukaan.\parencite{energiateollisuus} Niin kutsutut pohjavoimalaitokset, kuten esimerkiksi ydinvoimalaitokset ja osa \gls{CHP}-voimaloista taas ajavat käytännössä koko ajan nimellistehollaan tuottaen suurimman osan kulutetusta energiasta. Vuonna 2018 ydinvoimalla ja CHP-voimaloilla tuotettiin noin \SI{44}{\tera\watt\hour} sähköä, mikä vastaa hieman alle puolta Suomen vuotuisesta sähköenergiantuotannosta.\parencite{SVTSaLaTuo} Pohjavoimalaitoksille tyypillistä on polttoaineen suhteellisen halpa hinta, ja täten kohtuulliset muuttuvat kustannukset investointikustannusten ollessa niihin verrattuna suuria. Myöskin uusiutuvaa energiaa, kuten tuuli- ja aurinkovoimaa ajetaan käytännössä myös jatkuvasti nimellistehollaan, sillä polttoainekustannuksia ei ole.
 
@@ -72,7 +72,10 @@ Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai ni
 
   Aurinkoinvertterissä ei itsessään kuitenkaan ole reaaliaikaista energiamittausta, eikä nykyisissä verkonhaltijan energiamittareissa ole reaaliaikasta mittausta, jota invertteri tai kodin automaatiojärjestelmä voisi hyödyntää. Reaaliaikanen mittaus saadaan erillisellä energiamittarilla, tai tulevaisuudessa seuraavan sukupolven AMI-mittareilla. Reaaliaikainen mittaus mahdollistaa sähkön nettomittauksen, jolloin esimerkiksi varaajasta voidaan aktivoida vain sen vaiheen lämmitysvastus, josta sähköä on siirtymässä verkon suuntaan.
 
-  \section{Haasteet sovelluksissa}
+\section{Loistehon kompensointi}
+  Aurinkoinverttereitä voidaan käyttää loistehon kompensoinnissa, sillä uusimmat invertterit pystyvät tuottamaan jopa 100\%:a nimellistehostaan loistehona myös tuottoajan ulkopuolella. 
+
+\section{Haasteet sovelluksissa}
 
   Rajapinnat ja niitä hyödyntävät sovellukset tuovat haasteita ja mahdollisia haittavaikutuksia. Kuten monesti uuden tekniikan käyttöönottoon liittyy, turvallisuusnäkökulma saattaa jäädä aluksi huomioimatta. Osa haasteista saattaa taas ilmetä vasta testattaessa tekniikoita käytännössä tai kun niiden käyttö alkaa olemaan laajalle levinnyttä.
 
