Repon kommentoimia juttuja

--- a/tex/pumput_sahkon_kayttajina.tex
+++ b/tex/pumput_sahkon_kayttajina.tex
@@ -48,11 +48,11 @@ Lämpöpumppuja käytetään pääasiassa kiinteistöjen lämmitykseen ja viilen
 \section{Taajuusmuuttajakäytöt}
   Nykyaikainen ratkaisu lämpöpumpujen kompressorien käyttämiseen on taajuusmuuttaja. Taajuusmuuttaja koostuu tasasuuntaajasta ja ohjatusta vaihtosuuntaajasta, jolla saadaan tuotettua halutun suuruista ja taajuista vaihtojännitettä. Käynnistettäessä kompressoria aloitetaan moottorin syöttäminen matalataajuisella vaihtojännitteellä. Moottorin käyntinopeuden noustessa kohti haluttua arvoa, nostetaan samalla jännitteen taajuutta niin, että verkosta otettu teho pysyy suurin piirtein vakiona pyörimisnopeudesta riippumatta.
 
-  Taajuusmuuttajan käytöllä saavutetaan useita hyötyjä. Käynnistysvirtapiikkien poistamisen lisäksi taajuusmuuttajalla voidaan myöskin säädellä kompressorin tuottamaa tehoa. Tehon säätäminen mahdollistaa pidemmät käyntijaksot ja tasaisemman tehonkulutuksen, mutta ei kuitenkaan vähennä lämpöpumpusta saatavaa maksimitehoa. Myöskin pienempien energiamäärien tuottaminen voidaan toteuttaa järkevästi kiivaimman lämmityskauden ulkopuolella.
+  Taajuusmuuttajan käytöllä saavutetaan useita hyötyjä. Käynnistysvirtapiikkien poistamisen lisäksi taajuusmuuttajalla voidaan myöskin säädellä kompressorin tuottamaa tehoa. Tehon säätäminen mahdollistaa pidemmät käyntijaksot ja tasaisemman tehonkulutuksen, mutta ei kuitenkaan vähennä lämpöpumpusta saatavaa maksimitehoa. Pienempien energiamäärien tuottaminen toteutetaan pienentämällä kompressorin käyntinopeutta, jolloin lämpöpumppua ei tarvitse käyttää useissa lyhyemmissä käyntijaksoissa.
 
-  Verkon näkökulmasta taajuusmuuttaja näyttäytyy lähes resistiivisenä kuormana, eikä sen loistehon kulutus ole yhtä suuri kuin suoraan verkkoon kytketyllä oikosulkumoottorilla. Tämä osaltaan vähentää verkon kuormitusta ja laskee jännitehäviöitä. Taajuusmuuttajan verkkoon aiheuttamat jännitehäiriöt riippuvat paljon taajuusmuuttajasta, sen laadusta ja koosta.
+  Verkon näkökulmasta taajuusmuuttaja näyttäytyy eri tavoilla riippuen siitä, miten siinä on totetutettu vaihtovirran tasasuuntaus. Perinteisissä ja halvemmissa taajuusmuuttajissa tasasuuntaus on toteutettu diodisillalla. Diodisilta aiheuttaa sisääntulevan virran säröytymistä ja sitä kautta myöskin jännitehäiriöitä verkkoon. Myöskään lämpöpumpun tehokertoimen säätäminen ei onnistu. Diodisiltaa parempi ratkaisu on verkkovaihtosuuntaaja, jonka ottama virta voidaan säätää lähes sinimuotoiseksi, jolloin virtasärön syntyminen voidaan ehkäistä. Verkkovaihtosuuntaajan tehokerrointa voidaan myöskin säätää, jolloin sitä voidaan käyttää loistehotasapainon ylläpitämiseen. Mikäli lämpöpumppua syöttävä taajuusmuuttaja on säädetty niin, että se näyttäytyy verkkoon lähes resistiivisenä kuormana se osaltaan vähentää verkon kuormitusta ja laskee jännitehäviöitä. Taajuusmuuttajan verkkoon aiheuttamat jännitehäiriöt riippuvat paljon taajuusmuuttajasta, sen laadusta ja koosta. \parencite{koskenjoki}
 
 \section{Resistiivinen kuorma}
   Moottorikuormien lisäksi lämpöpumppujen yhteyteen asennetaan usein lämpövastuksia. Mikäli kyseessä on osatehomitoitettu lämpöpumppu, vastuksia käytetään suurimman energiatarpeen aikana, jolloin lämpöpumppu itsessään ei kykene tuottamaan kaikkea tarvittavaa energiaa. Lämpövastuksia käytetään myöskin höyrystimeen kertyneen jään ja huurteen poistoon.
 
-  Lämpöpumpuissa kuluu sähköä myös muihin tarkoituksiin kuin suoraan energiantuotantoon. Automatiikan, ohjauksen ja sisä- ja ulkoyksiköiden puhaltimien kuluttama energia on kuitenkin vähäistä verrattuna muuhun energiankulutukseen.
+  Lämpöpumpuissa kuluu sähköä myös muihin tarkoituksiin kuin suoraan energiantuotantoon. Automatiikan, ohjauksen ja sisä- ja ulkoyksiköiden puhaltimien kuluttama energia on kuitenkin vähäistä verrattuna muuhun energiankulutukseen
