--- a/tex/ilmari_references.bib
+++ b/tex/ilmari_references.bib
@@ -267,3 +267,10 @@ organization = {Helen Oy},
 url = {https://www.helen.fi/helen-oy/energia/energiantuotanto/voimalaitokset/katri-vala},
 urldate = {2020-08-29}
 }
+
+@mastersthesis{koskenjoki,
+  author  = {Kari Koskenjoki},
+  title   = {Verkkovaihtosuuntaajan Suuntaajasillan Optimointi},
+  school  = {Tampereen Teknillinen Yliopisto},
+  year    = {2012}
+}
