--- a/tex/sovellukset.tex
+++ b/tex/sovellukset.tex
@@ -1,8 +1,8 @@
-Lämpöpumppujen kommunikaatiorajapintoja voidaan hyödyntää useaan eri tarkoitukseen. Yksittäisten lämpöpumppujen monitorointiin ja hallintaan on olemassa ratkaisuja. Nykyään lämpöpumpputoimittajat saattavatkin tarjoavat lämpöpumpun yhteyteen etäohjauksen mahdollistavia toimintoja ja sovelluksia. Suurempia hyötyjä saadaan kuitenkin useiden useiden yksiköiden muodostamien lämpöpumppupoolien ohjaamisesta. 
+Lämpöpumppujen kommunikaatiorajapintoja voidaan hyödyntää useaan eri tarkoitukseen. Yksittäisten lämpöpumppujen monitorointiin ja hallintaan on olemassa ratkaisuja. Nykyään lämpöpumpputoimittajat saattavatkin tarjoavat lämpöpumpun yhteyteen etäohjauksen mahdollistavia toimintoja ja sovelluksia. Suurempia hyötyjä saadaan kuitenkin useiden yksiköiden muodostamien lämpöpumppupoolien ohjaamisesta.
 
-Myös aurinkosähköjärjestelmien kommunikaatiorajapintoja voidaan hyödyntää eri tarkoituksiin. Halvimpia malleja lukuunottamatta monet valmistajat tarjoavat suoraan invertterissä etämonitorointimahdollisuuden verkon yli, joillakin on jopa kehitetty mobiilisovellus tätä varten. Lisäksi invertterit tarjoavat usein fyysisen rajapinnan esimerkiksi kodin automaatiojärjestelmään liittämistä varten. 
+Myös aurinkosähköjärjestelmien kommunikaatiorajapintoja voidaan hyödyntää eri tarkoituksiin. Halvimpia malleja lukuunottamatta monet valmistajat tarjoavat suoraan invertterissä etämonitorointimahdollisuuden verkon yli, joillakin on jopa kehitetty mobiilisovellus tätä varten. Lisäksi invertterit tarjoavat usein fyysisen rajapinnan esimerkiksi kodin automaatiojärjestelmään liittämistä varten.
 
-Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai niiden mahdollistamia sovelluksia. Sovelluksia käydään läpi nykytekniikan puitteissa, mutta kappaleessa avataan myös tulevaisuudennäkymiä. 
+Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai niiden mahdollistamia sovelluksia. Sovelluksia käydään läpi nykytekniikan puitteissa, mutta kappaleessa avataan myös tulevaisuudennäkymiä.
 
 
 \section{Etämonitorointi ja -ohjaus}
@@ -16,11 +16,11 @@ Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai ni
   \end{itemize} \parencite{Latomaki}
   Esimerkiksi lämpöpumpun käyttäjän ollessa poissa kotoa, pystyy hän siitä huolimatta varmistamaan kotinsa lämpötilan ja järjestelmien toimivuuden. Myöskin virhetilanteissa pystytään reagoimaan nopeammin.
 
-  Aurinkosähköjärjestelmän tapauksessa monitorointi tarkoittaa pääosin hetkellisen tuoton ja tuottohistorian tarkastelua. Toki tiedoista enemmän kiinnostunut voi myös tarkastella verkon tilaa invertterin kautta, sillä monissa inverttereissä pystyy jo katsomaan esimerkiksi verkon tehokerrointa sekä taajuutta. Etämonitorointia voidaan hyödyntää myös vikatilanteiden seuraamisessa, esimerkiksi SMA:n Smart Connected -palvelun avulla SMA hoitaa vikatilanteiden viestinnän asiakkaalle, sekä hoitaa oikeiden komponenttien tilaamisen huoltoyritykselle \parencite{SmartConnected}. Tällä tavalla asiakas saa laitteen nopeasti toimintakuntoon, eikä huoltoyrityksen tarvitse käydä ensin paikan päällä tarkistamassa laitetta vaan voi suoraan hoitaa huollon alusta loppuun. 
+  Aurinkosähköjärjestelmän tapauksessa monitorointi tarkoittaa pääosin hetkellisen tuoton ja tuottohistorian tarkastelua. Toki tiedoista enemmän kiinnostunut voi myös tarkastella verkon tilaa invertterin kautta, sillä monissa inverttereissä pystyy jo katsomaan esimerkiksi verkon tehokerrointa sekä taajuutta. Etämonitorointia voidaan hyödyntää myös vikatilanteiden seuraamisessa, esimerkiksi SMA:n Smart Connected -palvelun avulla SMA hoitaa vikatilanteiden viestinnän asiakkaalle, sekä hoitaa oikeiden komponenttien tilaamisen huoltoyritykselle \parencite{SmartConnected}. Tällä tavalla asiakas saa laitteen nopeasti toimintakuntoon, eikä huoltoyrityksen tarvitse käydä ensin paikan päällä tarkistamassa laitetta vaan voi suoraan hoitaa huollon alusta loppuun.
 
   Kun lämpöpumppua pystytään monitoroinnin lisäksi myös ohjaamaan etänä, puhutaan etähallinnasta. Toisin kuin pelkästä monitoroinnista, lämpöpumpun etähallinnasta saattaa olla enemmän käytännön hyötyä myös omakotitaloasujalle. Etähallinnalla voidaan saavuttaa energian säästöä eri tavoilla. Etähallinta mahdollistaa muunmuassa matalamman sisälämpötilan ylläpitämisen asukkaiden ollessa poissa, minkä jälkeen voidaan nostaa asunnon lämpötilaa juuri ennen asukkaiden paluuta kotiin. Kesällä sama periaate pätee jäähdytykseen, mikäli käytettävä lämpöpumppu toimii myös jäähdyttävänä järjestelmänä. Tälläistä saatetaan kutsua esimerkiksi lomatoiminnoksi. Etähallintasovelluksesta on myöskin helppo tehdä intuitiivinen käyttää, koska käyttöliittymä voidaan tuoda kiinteästi lämpöpumpun yhteyteen asennetuista sulautetuista käyttöliittymistä käyttäjän omalle laitteelle.
 
-  Aurinkosähköjärjestelmän etähallinnalla ei kotitalouksissa ole tarvetta, sillä järjestelmä on suunniteltu toimimaan jatkuvasti parhaalla tuotolla. Etähallinnasta voi tosin olla kiinnostunut tulevaisuudessa verkonhaltija, sillä se voi muuttaa esimerkiksi sen käyttäytymistä eri jännite- tai taajuusalueilla, tai pakottaa koko järjestelmän pysäyttämisen esimerkiksi verkon huoltotöiden ajaksi. Tällä hetkellä verkonhaltijan etäkäytön estää oikeastaan puuttuvat järjestelmäintegraatiot, sillä nykyisiin energiamittareihin ei ole integroitu kommunikaatiota ulkoisille laitteille. Aurinkoinverttereiden integrointi verkonhaltijan \gls{SCADA}-järjestelmään on toki mahdollista, mutta se on järkevää vain suuremmissa järjestelmissä nykyisillä standardeilla, sillä verkonhaltijalla ei ole kaksisuuntaista kommunikaatiota kotitalouksiin ennestään. 
+  Aurinkosähköjärjestelmän etähallinnalla ei kotitalouksissa ole tarvetta, sillä järjestelmä on suunniteltu toimimaan jatkuvasti parhaalla tuotolla. Etähallinnasta voi tosin olla kiinnostunut tulevaisuudessa verkonhaltija, sillä se voi muuttaa esimerkiksi sen käyttäytymistä eri jännite- tai taajuusalueilla, tai pakottaa koko järjestelmän pysäyttämisen esimerkiksi verkon huoltotöiden ajaksi. Tällä hetkellä verkonhaltijan etäkäytön estää oikeastaan puuttuvat järjestelmäintegraatiot, sillä nykyisiin energiamittareihin ei ole integroitu kommunikaatiota ulkoisille laitteille. Aurinkoinverttereiden integrointi verkonhaltijan \gls{SCADA}-järjestelmään on toki mahdollista, mutta se on järkevää vain suuremmissa järjestelmissä nykyisillä standardeilla, sillä verkonhaltijalla ei ole kaksisuuntaista kommunikaatiota kotitalouksiin ennestään.
 
   Kommunikointi lämpöpumpun ja asiakkaan päätelaitteen, joka voi olla esimerkiksi puhelin tai tietokone, voi tapahtua monella erilaisella tavalla. Monet lämpöpumppuvalmistajat tarjoavat lämpöpumppuihinsa lisäpalveluna etäohjaustoiminnallisuutta, joka näyttäytyy käyttäjälle esimerkiksi mobiilisovelluksena tai selaimessa käytettävänä verkkosovelluksena. Lämpöpumpputoimittajan tarjoamissa ratkaisuissa ei vaadita käyttäjältä yleensä sen suuryttäjälle esimerkiksi mobiilisovelluksena tai selaimessa käytettävänä verkkosovelluksena. Lämpöpumpputoimittajan tarjoamissa ratkaisuissa ei vaadita käyttäjältä yleensä sen suurempaa perehtymistä tai asiantuntemusta. Toimittaja saattaa myös tarjota valmiita ratkaisuja lämpöpumpun integroimiseen taloautomaation kanssa.
 
@@ -30,11 +30,11 @@ Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai ni
 
 \section{Kysyntäjousto}
 
-  Normaalissa keskitetyssä sähköenergiajärjestelmässä sähkötehon kulutus vaihtelee muunmuassa vuodenajan, vuorokaudenajan ja sään mukaan. Valmistava suurteollisuus, eli metsä-, metalli- ja kemianteollisuus, kuluttaa noin \SI{40}{\percent} Suomessa käytetystä sähköstä Tästä johtuen teollisuuden prosessien tila saattaa vaikuttaa merkittävästi järjestelmän tehonkulutukseen\parencite{SVTehk}. Sähköverkosta otetun ja siihen syötetyn tehon pitää jatkuvasti olla yhtä suuret, minkä takia tuotantotehoa pitää säätää. Perinteisessä järjestelmässä tehonkulutuksen muutoksia ennakoidaan ja tehontuotantoa säädellään ajamalla esimerkiksi lauhde- ja \gls{CHP}-voimaloita tietyn suunnitelman mukaan.\parencite{energiateollisuus} Niin kutsutut pohjavoimalaitokset, kuten esimerkiksi ydinvoimalaitokset ja osa \gls{CHP}-voimaloista taas ajavat käytännössä koko ajan nimellistehollaan tuottaen suurimman osan kulutetusta energiasta. Vuonna 2018 ydinvoimalla ja CHP-voimaloilla tuotettiin noin \SI{44}{\tera\watt\hour} sähköä, mikä vastaa hieman alle puolta Suomen vuotuisesta sähköenergiantuotannosta.\parencite{SVTSaLaTuo} Pohjavoimalaitoksille tyypillistä on polttoaineen suhteellisen halpa hinta, ja täten kohtuulliset muuttuvat kustannukset investointikustannusten ollessa niihin verrattuna suuria. Myöskin uusiutuvaa energiaa, kuten tuuli- ja aurinkovoimaa ajetaan käytännössä myös jatkuvasti nimellistehollaan, sillä polttoainekustannuksia ei ole.
+  Normaalissa keskitetyssä sähköenergiajärjestelmässä sähkötehon kulutus vaihtelee muunmuassa vuodenajan, vuorokaudenajan ja sään mukaan. Valmistava suurteollisuus, eli metsä-, metalli- ja kemianteollisuus, kuluttaa noin \SI{40}{\percent} Suomessa käytetystä sähköstä Tästä johtuen teollisuuden prosessien tila saattaa vaikuttaa merkittävästi järjestelmän tehonkulutukseen\parencite{SVTehk}. Sähköverkosta otetun ja siihen syötetyn tehon pitää jatkuvasti olla yhtä suuret, minkä takia tuotantotehoa pitää säätää. Perinteisessä järjestelmässä tehonkulutuksen muutoksia ennakoidaan ja tehontuotantoa säädellään ajamalla esimerkiksi lauhde- ja \gls{CHP}-voimaloita tietyn suunnitelman mukaan.\parencite{energiateollisuus} Niin kutsutut perusvoimalaitokset, kuten esimerkiksi ydinvoimalaitokset ja osa \gls{CHP}-voimaloista taas ajavat käytännössä koko ajan nimellistehollaan tuottaen suurimman osan kulutetusta energiasta. Vuonna 2018 ydinvoimalla ja CHP-voimaloilla tuotettiin noin \SI{44}{\tera\watt\hour} sähköä, mikä vastaa hieman alle puolta Suomen vuotuisesta sähköenergiantuotannosta.\parencite{SVTSaLaTuo} perusvoimalaitoksille tyypillistä on polttoaineen suhteellisen halpa hinta, ja täten kohtuulliset muuttuvat kustannukset investointikustannusten ollessa niihin verrattuna suuria. Myöskin uusiutuvaa energiaa, kuten tuuli- ja aurinkovoimaa ajetaan käytännössä myös jatkuvasti sen hetkisessä maksimitehopisteessä, sillä polttoainekustannuksia ei ole.
 
   Vaikka lauhdevoimalaitoksia käytetään osaltaan säätötehona, niitä ei kannata kuitenkaan käyttää tehonkulutuksen lyhytaikaisten vaihteluiden kattamiseen. Normaalissa laudevoimalaitoksessa esimerkiksi käynnistysajat ovat niin pitkiä, että sekuntitasolla tapahtuva tuotannon lisäys ei onnistu.\parencite{VJV2018} Suomessa yleisesti ja erityisesti sekuntitasolla tapahtuva tehotasapainon säätö tapahtuu pääosin vesivoimalla\parencite{energiateollisuus}, sillä vesivoiman tehontuottoa kyetään säätämään lähes reaaliajassa säätelemällä veden virtausta turbiineille. Sähköenergiajärjestelmässä esiintyvä tehoepätasapaino aiheuttaa muutoksia jännitteen taajuuteen. Ylituotannon aikana voimaloiden generaattoreiden pyörimistä vastustava momentti pienenee, jolloin pyörimisnopeus ja täten jännitteen taajuus pääsee kasvamaan. Alituotannon kohdalla tilanne on päinvastainen. Jännitteen taajuutta seuraamalla kyetään ohjaamaan säätövoiman tuotantoa lähes reaaliajassa. Kantaverkkoyhtiö Fingrid myöskin edellyttää voimalaitoksilta taajuusohjattua häiriöreserviä, joka on kyettävä ottamaan käyttöön, mikäli sähköverkon taajuus eroaa \SI{0.5}{\hertz} tai enemmän nimellistaajuudesta \SI{50}{\hertz} \parencite{VJV2018}.
 
-  Uusiutuvien energialähteiden käyttö sähköntuotannossa tuo omat haasteensa tehotasapainon ylläpitoon. Eniten käytettyjen uusiutuvien energialähteiden, eli aurinko- ja tuulivoiman, tuotanto riippuu voimakkaasti säästä ja vuorokaudenajasta. Kasvava uusiutuvien energialähteiden käyttö luo entisestään tarvetta säätövoimalle.\parencite{energiateollisuus} Säätövoima on kuitenkin huomattavasti kalliimpaa kuin pohjavoima. Kulutushuippujen aikana käytettävien huippuvoimalaitosten polttoainekulut ovat suuret, niiden käyttäessä sähköntuotantoon esimerkiki maakaasua tai hiiltä. Säätövoimaksi hyvin soveltuvaa vesivoimaa ei myöskään ole tarjolla määrättömästi. Sähköenergian varastointia ei nähdä vielä ratkaisuna uusiutuvan sähköntuotannon vaihteluihin, sillä akustojen kustannukset ovat vielä suuret. Monesta tekijästä johtuen sähkön tuotanto on muuttumassa vähemmän joustavaksi.
+  Uusiutuvien energialähteiden käyttö sähköntuotannossa tuo omat haasteensa tehotasapainon ylläpitoon. Eniten käytettyjen uusiutuvien energialähteiden, eli aurinko- ja tuulivoiman, tuotanto riippuu voimakkaasti säästä ja vuorokaudenajasta. Kasvava uusiutuvien energialähteiden käyttö luo entisestään tarvetta säätövoimalle.\parencite{energiateollisuus} Säätövoima on kuitenkin huomattavasti kalliimpaa kuin perusvoima. Kulutushuippujen aikana käytettävien huippuvoimalaitosten polttoainekulut ovat suuret, niiden käyttäessä sähköntuotantoon esimerkiki maakaasua tai hiiltä. Säätövoimaksi hyvin soveltuvaa vesivoimaa ei myöskään ole tarjolla määrättömästi. Sähköenergian varastointia ei nähdä vielä ratkaisuna uusiutuvan sähköntuotannon vaihteluihin, sillä akustojen kustannukset ovat vielä suuret. Monesta tekijästä johtuen sähkön tuotanto on muuttumassa vähemmän joustavaksi.
 
   Yksi tapa ratkaista sähköntuotannon joustamattomuuden aiheuttamia engelmia on kysyntäjousto, jossa tuotannon sijasta säädellään sähkön kulutusta reaaliajassa, etukäteen tehdyn suunnitelman mukaan tai ohjaamalla kuluttajaa tiettyihin valintoihin. Kysyntäjoustoa voidaan toteuttaa monella tapaa.\parencite{fingrid} Yksi tapa on ohjata sähkön kulutusta hinnoittelun avulla. Tuntihinnoitellun sähkön hintaa kuluttajalle säädellään tuotannon ja kulutuksen mukaan, suurimman hinnan osuessa suurimman kulutuksen ajalle. Äärimmäisin esimerkki kulutusjoustosta on kantaverkkoyhtiö Fingridin toteuttama sähkön kulutuksen alentaminen katkaisemalla jännite tietyiltä alueilta. Viimeisenä mainittua kulutuksen rajoittamista ei kuitenkaan tarvita, mikäli sähköverkossa ei ole suurta vikaa.
 
@@ -46,11 +46,11 @@ Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai ni
 
   Osa virtaaalivoimalan ympäristömerkityksestä koostuu siitä, ettei erillistä sähköntuotantolaitteistoa tarvitse rakentaa, vaan toiminta perustuu olemassa olevan tai tarpeeseen rakennettavan laitteiston lisähyödyntämiseen. Mikäli virtuaalivoimala koostuu kulutustaan vähentävistä yksiköistä, ei fingridin voimalaitoksille tarkoitetut verkkoonliittymismääräykset ole päteviä\parencite{VJV2018}.
 
-  Virtuaalivoimala voidaan koostaa kohteista, joissa energiaa saadaan varastoitua väliaikaisesti. Energiaa voidaan varastoida käyttökohteessa esimerkiksi akkuihin, josta esimerkkinä toimii kauppakeskus Sellon virtuaalivoimala Espoossa\parencite{sello}. Myöskin sähköautojen akkuja voidaan käyttää energian varastointiin, tällöin puhutään \gls{V2G}-tekniikasta\parencite{dictOfEnergy}. Mikäli energiaa varastoidaan itsenäisesti toimivaan suureen akustoon, tai esimerkiksi paineilmavoimalaitokseen tai pumppuvoimalaitokseen, puhutaan silloin yleensä sähköenergian varastoinnista, eikä virtuaalivoimalasta\parencite{dictOfEnergy}. 
+  Virtuaalivoimala voidaan koostaa kohteista, joissa energiaa saadaan varastoitua väliaikaisesti. Energiaa voidaan varastoida käyttökohteessa esimerkiksi akkuihin, josta esimerkkinä toimii kauppakeskus Sellon virtuaalivoimala Espoossa\parencite{sello}. Myöskin sähköautojen akkuja voidaan käyttää energian varastointiin, tällöin puhutaan \gls{V2G}-tekniikasta\parencite{dictOfEnergy}. Mikäli energiaa varastoidaan itsenäisesti toimivaan suureen akustoon, tai esimerkiksi paineilmavoimalaitokseen tai pumppuvoimalaitokseen, puhutaan silloin yleensä sähköenergian varastoinnista, eikä virtuaalivoimalasta\parencite{dictOfEnergy}.
 
   Kotitalouksien aurinkosähköjärjestelmistä koostuva virtuaalivoimala perustuu akullisten järjestelmien tuottamaan joustoon. Järjestelmässä olevien akkujen ei tarvitse olla kovinkaan suuria, jos niiden määrä sähköjärjestelmässä on suuri. Tällöin voidaan ohjata hyvinkin suurta määrää erittäin nopeasti säätyvää tehoa. Akkujen korkea hinta luo tosin korkean kynnyksen hankinnalle, varsinkin kun kuluttajan saamat hyödyt ei välttämättä ole kovinkaan suuret. Tämän sovelluksen käyttöä rajoittaa kommunikaatiorajapintojen monimutkaisuus samalla tavalla kuin aurinkosähköjärjestelmien etähallintaa; virtuaalivoimalaa hallinnoiva aggregaatti tarvitsee kommunikaatiorajapinnan jokaiseen kohteeseen, sillä nykyisellään sitä ei verkonhaltijalla ole. Tämä on tosin mahdollista toteuttaa, jos virtuaalivoimaloille saataisiin standardoitua rajapinta, sillä silloin valmistajat voisivat integroida tämän rajapinnan heidän omaan verkkopalveluun, eikä järjestelmä vaatisi tällöin fyysisiä muutoksia ollenkaan.
 
-  Lämpöpumpuista koostuvalle virtuaalivoimalalle ominaista on nimenomaan kulutusjouston myyminen. Virtuaalivoimalan toimiessa osana lämmitysjärjestelmää, käytetään esimerkiksi lämminvesivaraajaa, sisäilmaa tai kiinteistöä itseään energiavarastona. Kun Virtuaalivoimalaa käytetään kompensoimaan alituotantoa, kytketään lämpöpumppu, lämmitysvastus tai muu vastaava sähköä kuluttava toiminta pois päältä. Lämmityslaitteiden poiskytkemisaika on yleensä maksimissaa muutamia tunteja, minkä ansiosta lämmitettävä kiinteistö tai kohde ei ehdi jäähtymään merkittävästi, eikä esimerkiksi asumismukavuudesta tarvitse tinkiä. Kun taas kompensoidaan ylituotantoa, voidaan esimerkiksi lämpöpumppuja käyttää maksimitehollaan, kunnes lämminvesivaraaja, kiertovesi tai sisäilma saavuttaa asetetun maksimilämpötilansa. Lämpöpuppujen kompressoreiden lisäksi myös lisälämmitysvastuksia voidaan käyttää, jolloin käytetty sähköteho saatta olla jopa kaksinkertainen.
+  Lämpöpumpuista koostuvalle virtuaalivoimalalle ominaista on nimenomaan kulutusjouston myyminen. Virtuaalivoimalan toimiessa osana lämmitysjärjestelmää, käytetään esimerkiksi lämminvesivaraajaa tai kiinteistön rakenteia energiavarastona. Kun Virtuaalivoimalaa käytetään kompensoimaan alituotantoa, kytketään lämpöpumppu, lämmitysvastus tai muu vastaava sähköä kuluttava toiminta pois päältä. Lämmityslaitteiden poiskytkemisaika on yleensä maksimissaa muutamia tunteja, minkä ansiosta lämmitettävä kiinteistö tai kohde ei ehdi jäähtymään merkittävästi, eikä esimerkiksi asumismukavuudesta tarvitse tinkiä. Kun taas kompensoidaan ylituotantoa, voidaan esimerkiksi lämpöpumppuja käyttää maksimitehollaan, kunnes lämminvesivaraaja, kiertovesi tai sisäilma saavuttaa asetetun maksimilämpötilansa. Lämpöpuppujen kompressoreiden lisäksi myös lisälämmitysvastuksia voidaan käyttää, jolloin käytetty sähköteho saatta olla jopa kaksinkertainen.
 
 \subsection{Huipputehon rajoittaminen}
 
@@ -73,18 +73,18 @@ Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai ni
   Aurinkoinvertterissä ei itsessään kuitenkaan ole reaaliaikaista energiamittausta, eikä nykyisissä verkonhaltijan energiamittareissa ole reaaliaikasta mittausta, jota invertteri tai kodin automaatiojärjestelmä voisi hyödyntää. Reaaliaikanen mittaus saadaan erillisellä energiamittarilla, tai tulevaisuudessa seuraavan sukupolven AMI-mittareilla. Reaaliaikainen mittaus mahdollistaa sähkön nettomittauksen, jolloin esimerkiksi varaajasta voidaan aktivoida vain sen vaiheen lämmitysvastus, josta sähköä on siirtymässä verkon suuntaan.
 
 \section{Loistehon kompensointi}
-  Aurinkoinverttereitä voidaan käyttää loistehon kompensoinnissa, sillä uusimmat invertterit pystyvät tuottamaan jopa 100\%:a nimellistehostaan loistehona myös tuottoajan ulkopuolella. 
+  Aurinkoinverttereitä voidaan käyttää loistehon kompensoinnissa, sillä uusimmat invertterit pystyvät tuottamaan jopa 100\%:a nimellistehostaan loistehona myös tuottoajan ulkopuolella.
 
 \section{Haasteet sovelluksissa}
 
   Rajapinnat ja niitä hyödyntävät sovellukset tuovat haasteita ja mahdollisia haittavaikutuksia. Kuten monesti uuden tekniikan käyttöönottoon liittyy, turvallisuusnäkökulma saattaa jäädä aluksi huomioimatta. Osa haasteista saattaa taas ilmetä vasta testattaessa tekniikoita käytännössä tai kun niiden käyttö alkaa olemaan laajalle levinnyttä.
 
-  Lämpöpumppuja kytketään verkkoon, jotta käyttäjät voivat etäohjata sitä tai jotta sitä voidaan ohjata agregaattorin toimesta osana lämpöpumppupoolia. Erään riskityypin muodostavat vahingossa tai huolimattomuuttaan avoimeksi jätetyt ohjausrajapinnat. TCP-portteja voi olla avoinna niin, että kolmas osapuoli voi koittaa avata telnet- tai ssh-yhteyksiä laitteeseen. Mikäli yhteyden saa avattua käyttäen vakiokäyttäjätunnuksia ja -salasanoja, tai mahdollisesti täysin ilman tunnistautumista, ovat laitteet käytännössä kenen tahansa käytettävissä. 
-  
+  Lämpöpumppuja kytketään verkkoon, jotta käyttäjät voivat etäohjata sitä tai jotta sitä voidaan ohjata agregaattorin toimesta osana lämpöpumppupoolia. Erään riskityypin muodostavat vahingossa tai huolimattomuuttaan avoimeksi jätetyt ohjausrajapinnat. TCP-portteja voi olla avoinna niin, että kolmas osapuoli voi koittaa avata telnet- tai ssh-yhteyksiä laitteeseen. Mikäli yhteyden saa avattua käyttäen vakiokäyttäjätunnuksia ja -salasanoja, tai mahdollisesti täysin ilman tunnistautumista, ovat laitteet käytännössä kenen tahansa käytettävissä.
+
   Jos laitteisiin otetaan yhteyttä salaamattomilla protokollilla, voidaan ohjausliikenteestä kerätä tietoja, joiden päätyminen ulkopuolisten käsiin ei ole haluttua. Mahdollisia kerättäviä tietoja voivat olla esimerkiksi asukkaan läsnäolo tai tieto peseytymisajoista, joiden vuotaminen ulkopuolisille voi vaikuttaa vähintääkin turvallisuudentunteeseen. Ammattimainen rikollisuus voi myös käyttää näitä tietoja rikosten suunnitteluun, sillä tiedoilla pystyy määrittämään hyvinkin tarkasti, milloin koti on tyhjillään ja haavoittumaisimmillaan.
 
-  Kaapattujen eli luvatta etäohjattujen laitteiden väärinkäyttöön on monia tapoja. Pumppujen voidaan esimerkiksi ohjata tuottamaan omistajilleen ylimääräisiä kuluja tai vaihtamaan asunnon lämpötila täysin vääräksi. Mikäli lämpöpumpun yhteydessä on sulautettuna järjestelmänä esimerkiksi jokin linux- tai windows-käyttöjärjestelmä ohjaamassa pumpun toimintaa, pätevät siihen samat uhkakuvat kuin normaalin kotitietokoneen haltuunnottamiseen. Jos kolmas osapuoli kykenee asentamaan lämpöpumppua ohjaavaan tietokoneeseen omia ohjelmiaan, sitä voidaan käyttää vahingollisiin tarkoituksiin esimerkiksi hajautetun palvelunestohyökkäyksen toteuttamisessa. 
-  
+  Kaapattujen eli luvatta etäohjattujen laitteiden väärinkäyttöön on monia tapoja. Pumppujen voidaan esimerkiksi ohjata tuottamaan omistajilleen ylimääräisiä kuluja tai vaihtamaan asunnon lämpötila täysin vääräksi. Mikäli lämpöpumpun yhteydessä on sulautettuna järjestelmänä esimerkiksi jokin linux- tai windows-käyttöjärjestelmä ohjaamassa pumpun toimintaa, pätevät siihen samat uhkakuvat kuin normaalin kotitietokoneen haltuunnottamiseen. Jos kolmas osapuoli kykenee asentamaan lämpöpumppua ohjaavaan tietokoneeseen omia ohjelmiaan, sitä voidaan käyttää vahingollisiin tarkoituksiin esimerkiksi hajautetun palvelunestohyökkäyksen toteuttamisessa.
+
   Mikäli kolmannella osapuolella on mahdollisuus käyttää useampaa laitetta yhtäaikaa voidaa laitteita käyttää esimerkiksi häiriöiden tuottamiseen sähköverkossa, muun muassa äkillisen tehomuutoksen luomiseen tai verkon tehokertoimen säätämiseen. Nämä tuottaisivat lisää juuri niitä ongelmia, joiden ratkaisemiseen rajapintojen hyödyntämisellä pyritään.
 
   Ihmisen turvallisuudentunnetta lisää, kun hänellä on tunne siitä, että asioita voi kontrolloida itse. Kun lämpöpumpun ohjausta halutaan siirtää älykkäässä sähköverkossa kolmansille osapuolille kuten aggregaattoreille, tämä turvallisuudentunne saattaa horjua.
