--- a/tex/sovellukset.tex
+++ b/tex/sovellukset.tex
@@ -1,6 +1,6 @@
 Lämpöpumppujen kommunikaatiorajapintoja voidaan hyödyntää useaan eri tarkoitukseen. Yksittäisten lämpöpumppujen monitorointiin ja hallintaan on olemassa ratkaisuja. Nykyään lämpöpumpputoimittajat saattavatkin tarjoavat lämpöpumpun yhteyteen etäohjauksen mahdollistavia toimintoja ja sovelluksia. Suurempia hyötyjä saadaan kuitenkin useiden yksiköiden muodostamien lämpöpumppupoolien ohjaamisesta.
 
-Myös aurinkosähköjärjestelmien kommunikaatiorajapintoja voidaan hyödyntää eri tarkoituksiin. Halvimpia malleja lukuunottamatta monet valmistajat tarjoavat suoraan invertterissä etämonitorointimahdollisuuden verkon yli, joillakin on jopa kehitetty mobiilisovellus tätä varten. Lisäksi invertterit tarjoavat usein fyysisen rajapinnan esimerkiksi kodin automaatiojärjestelmään liittämistä varten.
+Myös aurinkosähköjärjestelmien kommunikaatiorajapintoja voidaan hyödyntää eri tarkoituksiin. Halvimpia malleja lukuun ottamatta monet valmistajat tarjoavat suoraan invertterin yhteydessä etämonitorointimahdollisuuden verkon yli, joillakin on jopa kehitetty mobiilisovellus tätä varten. Lisäksi invertterit tarjoavat usein fyysisen rajapinnan esimerkiksi kodin automaatiojärjestelmään liittämistä varten.
 
 Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai niiden mahdollistamia sovelluksia. Sovelluksia käydään läpi nykytekniikan puitteissa, mutta kappaleessa avataan myös tulevaisuudennäkymiä.
 
@@ -18,31 +18,31 @@ Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai ni
 
   Aurinkosähköjärjestelmän tapauksessa monitorointi tarkoittaa pääosin hetkellisen tuoton ja tuottohistorian tarkastelua. Toki tiedoista enemmän kiinnostunut voi myös tarkastella verkon tilaa invertterin kautta, sillä monissa inverttereissä pystyy jo katsomaan esimerkiksi verkon tehokerrointa sekä taajuutta. Etämonitorointia voidaan hyödyntää myös vikatilanteiden seuraamisessa, esimerkiksi SMA:n Smart Connected -palvelun avulla SMA hoitaa vikatilanteiden viestinnän asiakkaalle, sekä hoitaa oikeiden komponenttien tilaamisen huoltoyritykselle \parencite{SmartConnected}. Tällä tavalla asiakas saa laitteen nopeasti toimintakuntoon, eikä huoltoyrityksen tarvitse käydä ensin paikan päällä tarkistamassa laitetta vaan voi suoraan hoitaa huollon alusta loppuun.
 
-  Kun lämpöpumppua pystytään monitoroinnin lisäksi myös ohjaamaan etänä, puhutaan etähallinnasta. Toisin kuin pelkästä monitoroinnista, lämpöpumpun etähallinnasta saattaa olla enemmän käytännön hyötyä myös omakotitaloasujalle. Etähallinnalla voidaan saavuttaa energian säästöä eri tavoilla. Etähallinta mahdollistaa muunmuassa matalamman sisälämpötilan ylläpitämisen asukkaiden ollessa poissa, minkä jälkeen voidaan nostaa asunnon lämpötilaa juuri ennen asukkaiden paluuta kotiin. Kesällä sama periaate pätee jäähdytykseen, mikäli käytettävä lämpöpumppu toimii myös jäähdyttävänä järjestelmänä. Tälläistä saatetaan kutsua esimerkiksi lomatoiminnoksi. Etähallintasovelluksesta on myöskin helppo tehdä intuitiivinen käyttää, koska käyttöliittymä voidaan tuoda kiinteästi lämpöpumpun yhteyteen asennetuista sulautetuista käyttöliittymistä käyttäjän omalle laitteelle.
+  Kun lämpöpumppua pystytään monitoroinnin lisäksi myös ohjaamaan etänä, puhutaan etähallinnasta. Toisin kuin pelkästä monitoroinnista, lämpöpumpun etähallinnasta saattaa olla enemmän käytännön hyötyä myös omakotitaloasujalle. Etähallinnalla voidaan saavuttaa energian säästöä eri tavoilla. Etähallinta mahdollistaa muun muassa matalamman sisälämpötilan ylläpitämisen asukkaiden ollessa poissa, minkä jälkeen voidaan nostaa asunnon lämpötilaa juuri ennen asukkaiden paluuta kotiin. Kesällä sama periaate pätee jäähdytykseen, mikäli käytettävä lämpöpumppu toimii myös jäähdyttävänä järjestelmänä. Tälläistä saatetaan kutsua esimerkiksi lomatoiminnoksi. Etähallintasovelluksesta on myöskin helppo tehdä intuitiivinen käyttää, koska käyttöliittymä voidaan tuoda kiinteästi lämpöpumpun yhteyteen asennetuista sulautetuista käyttöliittymistä käyttäjän omalle laitteelle.
 
   Aurinkosähköjärjestelmän etähallinnalla ei kotitalouksissa ole tarvetta, sillä järjestelmä on suunniteltu toimimaan jatkuvasti parhaalla tuotolla. Etähallinnasta voi tosin olla kiinnostunut tulevaisuudessa verkonhaltija, sillä se voi muuttaa esimerkiksi sen käyttäytymistä eri jännite- tai taajuusalueilla, tai pakottaa koko järjestelmän pysäyttämisen esimerkiksi verkon huoltotöiden ajaksi. Tällä hetkellä verkonhaltijan etäkäytön estää oikeastaan puuttuvat järjestelmäintegraatiot, sillä nykyisiin energiamittareihin ei ole integroitu kommunikaatiota ulkoisille laitteille. Aurinkoinverttereiden integrointi verkonhaltijan \gls{SCADA}-järjestelmään on toki mahdollista, mutta se on järkevää vain suuremmissa järjestelmissä nykyisillä standardeilla, sillä verkonhaltijalla ei ole kaksisuuntaista kommunikaatiota kotitalouksiin ennestään.
 
-  Kommunikointi lämpöpumpun ja asiakkaan päätelaitteen, joka voi olla esimerkiksi puhelin tai tietokone, voi tapahtua monella erilaisella tavalla. Monet lämpöpumppuvalmistajat tarjoavat lämpöpumppuihinsa lisäpalveluna etäohjaustoiminnallisuutta, joka näyttäytyy käyttäjälle esimerkiksi mobiilisovelluksena tai selaimessa käytettävänä verkkosovelluksena. Lämpöpumpputoimittajan tarjoamissa ratkaisuissa ei vaadita käyttäjältä yleensä sen suuryttäjälle esimerkiksi mobiilisovelluksena tai selaimessa käytettävänä verkkosovelluksena. Lämpöpumpputoimittajan tarjoamissa ratkaisuissa ei vaadita käyttäjältä yleensä sen suurempaa perehtymistä tai asiantuntemusta. Toimittaja saattaa myös tarjota valmiita ratkaisuja lämpöpumpun integroimiseen taloautomaation kanssa.
+  Kommunikointi lämpöpumpun ja asiakkaan päätelaitteen, joka voi olla esimerkiksi puhelin tai tietokone, voi tapahtua monella erilaisella tavalla. Monet lämpöpumppuvalmistajat tarjoavat lämpöpumppuihinsa lisäpalveluna etäohjaustoiminnallisuutta, joka näyttäytyy käyttäjälle esimerkiksi mobiilisovelluksena tai selaimessa käytettävänä verkkosovelluksena. Lämpöpumpputoimittajan tarjoamissa ratkaisuissa ei vaadita käyttäjältä yleensä sen suurempaa perehtymistä tai asiantuntemusta. Toimittaja saattaa myös tarjota valmiita ratkaisuja lämpöpumpun integroimiseen taloautomaation kanssa.
 
-  Lämpöpumpun etäohjaus voidaan toteuttaa myös itse, mikä vaatii käyttäjältä enemmän asiantuntemusta. Tällöin pitää ohjattavan lämpöpumpun tarjota jokin ohjausrajapinta, esimerkiksi modBUS-väylä tai vastaava, tai vähintäänkin lämpöpumpun pitää tukea tämän mahdollistavaa laajennusta. Käyttäjän pitää itse toteuttaa ainakin ohjauslogiikka, käyttöliittymä ja päättää minkälaista palvelinta haluaa ylläpitää näiden mahdollistamiseksi.
+  Lämpöpumpun etäohjaus voidaan toteuttaa myös itse, mikä vaatii käyttäjältä enemmän asiantuntemusta. Tällöin pitää ohjattavan lämpöpumpun tarjota jokin ohjausrajapinta, esimerkiksi Modbus-liitäntä tai vastaava, tai vähintäänkin lämpöpumpun pitää tukea tämän mahdollistavaa laajennusta. Käyttäjän pitää itse toteuttaa ainakin ohjauslogiikka, käyttöliittymä ja päättää minkälaista palvelinta haluaa ylläpitää näiden mahdollistamiseksi.
 
   Yksittäisen lämpöpumpun ohjauksella saavutettavat hyödyt ovat lähinnä yksittäisen omakotitalokäyttäjän saavuttamia säästöjä tai vastaavasti teollisuudessa tapahtuvaa järjestelmien hallinnasta saavutettavia etuja. Merkittävämmät lämpöpumppujen rajapintoja hyödyntävät sovellukset koskevat hyödyt saavutetaan, kun ohjattavia lämpöpumppuja on useampia.
 
 \section{Kysyntäjousto}
 
-  Normaalissa keskitetyssä sähköenergiajärjestelmässä sähkötehon kulutus vaihtelee muunmuassa vuodenajan, vuorokaudenajan ja sään mukaan. Valmistava suurteollisuus, eli metsä-, metalli- ja kemianteollisuus, kuluttaa noin \SI{40}{\percent} Suomessa käytetystä sähköstä Tästä johtuen teollisuuden prosessien tila saattaa vaikuttaa merkittävästi järjestelmän tehonkulutukseen\parencite{SVTehk}. Sähköverkosta otetun ja siihen syötetyn tehon pitää jatkuvasti olla yhtä suuret, minkä takia tuotantotehoa pitää säätää. Perinteisessä järjestelmässä tehonkulutuksen muutoksia ennakoidaan ja tehontuotantoa säädellään ajamalla esimerkiksi lauhde- ja \gls{CHP}-voimaloita tietyn suunnitelman mukaan.\parencite{energiateollisuus} Niin kutsutut perusvoimalaitokset, kuten esimerkiksi ydinvoimalaitokset ja osa \gls{CHP}-voimaloista taas ajavat käytännössä koko ajan nimellistehollaan tuottaen suurimman osan kulutetusta energiasta. Vuonna 2018 ydinvoimalla ja CHP-voimaloilla tuotettiin noin \SI{44}{\tera\watt\hour} sähköä, mikä vastaa hieman alle puolta Suomen vuotuisesta sähköenergiantuotannosta.\parencite{SVTSaLaTuo} perusvoimalaitoksille tyypillistä on polttoaineen suhteellisen halpa hinta, ja täten kohtuulliset muuttuvat kustannukset investointikustannusten ollessa niihin verrattuna suuria. Myöskin uusiutuvaa energiaa, kuten tuuli- ja aurinkovoimaa ajetaan käytännössä myös jatkuvasti sen hetkisessä maksimitehopisteessä, sillä polttoainekustannuksia ei ole.
+  Normaalissa keskitetyssä sähköenergiajärjestelmässä sähkötehon kulutus vaihtelee muun muassa vuodenajan, vuorokaudenajan ja sään mukaan. Valmistava suurteollisuus, eli metsä-, metalli- ja kemianteollisuus, kuluttaa noin \SI{40}{\percent} Suomessa käytetystä sähköstä. Tästä johtuen teollisuuden prosessien tila saattaa vaikuttaa merkittävästi järjestelmän tehonkulutukseen\parencite{SVTehk}. Sähköverkosta otetun ja siihen syötetyn tehon pitää jatkuvasti olla yhtä suuret, minkä takia tuotantotehoa pitää säätää. Perinteisessä järjestelmässä tehonkulutuksen muutoksia ennakoidaan ja tehontuotantoa säädellään ajamalla esimerkiksi lauhde- ja \gls{CHP}-voimaloita tietyn suunnitelman mukaan.\parencite{energiateollisuus} Niin kutsutut perusvoimalaitokset, kuten esimerkiksi ydinvoimalaitokset ja osa \gls{CHP}-voimaloista taas ajavat käytännössä koko ajan nimellistehollaan tuottaen suurimman osan kulutetusta energiasta. Vuonna 2018 ydinvoimalla ja CHP-voimaloilla tuotettiin noin \SI{44}{\tera\watt\hour} sähköä, mikä vastaa hieman alle puolta Suomen vuotuisesta sähköenergiantuotannosta.\parencite{SVTSaLaTuo} perusvoimalaitoksille tyypillistä on polttoaineen suhteellisen halpa hinta, ja täten kohtuulliset muuttuvat kustannukset investointikustannusten ollessa niihin verrattuna suuria. Myöskin uusiutuvaa energiaa, kuten tuuli- ja aurinkovoimaa ajetaan käytännössä myös jatkuvasti sen hetkisessä maksimitehopisteessä, sillä polttoainekustannuksia ei ole.
 
   Vaikka lauhdevoimalaitoksia käytetään osaltaan säätötehona, niitä ei kannata kuitenkaan käyttää tehonkulutuksen lyhytaikaisten vaihteluiden kattamiseen. Normaalissa laudevoimalaitoksessa esimerkiksi käynnistysajat ovat niin pitkiä, että sekuntitasolla tapahtuva tuotannon lisäys ei onnistu.\parencite{VJV2018} Suomessa yleisesti ja erityisesti sekuntitasolla tapahtuva tehotasapainon säätö tapahtuu pääosin vesivoimalla\parencite{energiateollisuus}, sillä vesivoiman tehontuottoa kyetään säätämään lähes reaaliajassa säätelemällä veden virtausta turbiineille. Sähköenergiajärjestelmässä esiintyvä tehoepätasapaino aiheuttaa muutoksia jännitteen taajuuteen. Ylituotannon aikana voimaloiden generaattoreiden pyörimistä vastustava momentti pienenee, jolloin pyörimisnopeus ja täten jännitteen taajuus pääsee kasvamaan. Alituotannon kohdalla tilanne on päinvastainen. Jännitteen taajuutta seuraamalla kyetään ohjaamaan säätövoiman tuotantoa lähes reaaliajassa. Kantaverkkoyhtiö Fingrid myöskin edellyttää voimalaitoksilta taajuusohjattua häiriöreserviä, joka on kyettävä ottamaan käyttöön, mikäli sähköverkon taajuus eroaa \SI{0.5}{\hertz} tai enemmän nimellistaajuudesta \SI{50}{\hertz} \parencite{VJV2018}.
 
-  Uusiutuvien energialähteiden käyttö sähköntuotannossa tuo omat haasteensa tehotasapainon ylläpitoon. Eniten käytettyjen uusiutuvien energialähteiden, eli aurinko- ja tuulivoiman, tuotanto riippuu voimakkaasti säästä ja vuorokaudenajasta. Kasvava uusiutuvien energialähteiden käyttö luo entisestään tarvetta säätövoimalle.\parencite{energiateollisuus} Säätövoima on kuitenkin huomattavasti kalliimpaa kuin perusvoima. Kulutushuippujen aikana käytettävien huippuvoimalaitosten polttoainekulut ovat suuret, niiden käyttäessä sähköntuotantoon esimerkiki maakaasua tai hiiltä. Säätövoimaksi hyvin soveltuvaa vesivoimaa ei myöskään ole tarjolla määrättömästi. Sähköenergian varastointia ei nähdä vielä ratkaisuna uusiutuvan sähköntuotannon vaihteluihin, sillä akustojen kustannukset ovat vielä suuret. Monesta tekijästä johtuen sähkön tuotanto on muuttumassa vähemmän joustavaksi.
+  Uusiutuvien energialähteiden käyttö sähköntuotannossa tuo omat haasteensa tehotasapainon ylläpitoon. Eniten käytettyjen uusiutuvien energialähteiden, eli aurinko- ja tuulivoiman, tuotanto riippuu voimakkaasti säästä ja vuorokaudenajasta. Kasvava uusiutuvien energialähteiden käyttö luo entisestään tarvetta säätövoimalle.\parencite{energiateollisuus} Säätövoima on kuitenkin huomattavasti kalliimpaa kuin perusvoima. Kulutushuippujen aikana käytettävien huippuvoimalaitosten polttoainekulut ovat suuret, niiden käyttäessä sähköntuotantoon esimerkiksi maakaasua tai hiiltä. Säätövoimaksi hyvin soveltuvaa vesivoimaa ei myöskään ole tarjolla määrättömästi. Sähköenergian varastointia ei nähdä vielä ratkaisuna uusiutuvan sähköntuotannon vaihteluihin, sillä akustojen kustannukset ovat vielä suuret. Monesta tekijästä johtuen sähkön tuotanto on muuttumassa vähemmän joustavaksi.
 
-  Yksi tapa ratkaista sähköntuotannon joustamattomuuden aiheuttamia engelmia on kysyntäjousto, jossa tuotannon sijasta säädellään sähkön kulutusta reaaliajassa, etukäteen tehdyn suunnitelman mukaan tai ohjaamalla kuluttajaa tiettyihin valintoihin. Kysyntäjoustoa voidaan toteuttaa monella tapaa.\parencite{fingrid} Yksi tapa on ohjata sähkön kulutusta hinnoittelun avulla. Tuntihinnoitellun sähkön hintaa kuluttajalle säädellään tuotannon ja kulutuksen mukaan, suurimman hinnan osuessa suurimman kulutuksen ajalle. Äärimmäisin esimerkki kulutusjoustosta on kantaverkkoyhtiö Fingridin toteuttama sähkön kulutuksen alentaminen katkaisemalla jännite tietyiltä alueilta. Viimeisenä mainittua kulutuksen rajoittamista ei kuitenkaan tarvita, mikäli sähköverkossa ei ole suurta vikaa.
+  Yksi tapa ratkaista sähköntuotannon joustamattomuuden aiheuttamia ongelmia on kysyntäjousto, jossa tuotannon sijasta säädellään sähkön kulutusta reaaliajassa, etukäteen tehdyn suunnitelman mukaan tai ohjaamalla kuluttajaa tiettyihin valintoihin. Kysyntäjoustoa voidaan toteuttaa monella tapaa.\parencite{fingrid} Yksi tapa on ohjata sähkön kulutusta hinnoittelun avulla. Tuntihinnoitellun sähkön hintaa kuluttajalle säädellään tuotannon ja kulutuksen mukaan, suurimman hinnan osuessa suurimman kulutuksen ajalle. Äärimmäisin esimerkki kulutusjoustosta on kantaverkkoyhtiö Fingridin toteuttama sähkön kulutuksen alentaminen katkaisemalla jännite tietyiltä alueilta. Viimeisenä mainittua kulutuksen rajoittamista ei kuitenkaan tarvita, mikäli sähköverkossa ei ole suurta vikaa.
 
-  Sähköverkossa olevilla suurilla yhtenäisillä kuormilla, joiden kulutusta pystytään ohjaamaan, voidaan toteuttaa kysyntäjoustoa\parencite{fingrid}. Suomessa on käytössä noin miljoona (vuonna 2019) lämpöpumppua\parencite{sulpu}. Mikäli lämöpumpun keskimääräiseksi sähkötehoksi käytön aikana arvioidaan esimerkiksi \SI{1}{\kilo\watt}, tulee niiden yhteistehoksi \SI{1}{\giga\watt}. Tämä vastaa noin yhtä neljästoista koko Suomen sähkökulutuksesta kovimman sähkönkulutuksen aikaan. Suurimman lämmitystehontarpeen aikana saatetaan myöskin käyttää lämpöpumpun yhteyteen asennettua lisälämmitysvastusta, jolloin yksittäisen lämpöpumpun sähköteho nousee selvästi.
+  Sähköverkossa olevilla suurilla yhtenäisillä kuormilla, joiden kulutusta pystytään ohjaamaan, voidaan toteuttaa kysyntäjoustoa\parencite{fingrid}. Suomessa on käytössä noin miljoona (vuonna 2019) lämpöpumppua\parencite{sulpu}. Mikäli lämpöpumpun keskimääräiseksi sähkötehoksi käytön aikana arvioidaan esimerkiksi \SI{1}{\kilo\watt}, tulee niiden yhteistehoksi \SI{1}{\giga\watt}. Tämä vastaa noin yhtä neljästoista koko Suomen sähkökulutuksesta kovimman sähkönkulutuksen aikaan. Suurimman lämmitystehontarpeen aikana saatetaan myöskin käyttää lämpöpumpun yhteyteen asennettua lisälämmitysvastusta, jolloin yksittäisen lämpöpumpun sähköteho nousee selvästi.
 
 \subsection{Virtuaalivoimalat}
 
-  Virtuaalivoimala on yksi tapa toteuttaa kysyntäjoustoa. Virtuaalivoimala koostuu pienistä sähköä tuottavista yksiköistä tai yhdestä tai useammasta kuormasta, joiden tehonkulutusta ohjataan yhtenä yksikkönä. Virtaalivoimalan omistaja myy sähkömarkkinoille joustokapasiteettia. Suuren sähkönkulutuksen aikana kantaverkkoyhtiö maksaa virtuaalivoimalaoperaattorille siitä, että voimalaan kuuluvissa kiinteistöissä tai muissa kulutuskohteissa vähennetään sähkön käyttöä hetkellisesti. Vastaavasti ylituotantotilanteessa kantaverkkoyhtiö voi ostaa virtuaalivoimalalta kulutusta vastaamaan sen hetkistä tuotantoa. Reservimarkkinoiden hinnat siis määrävät virtuaalivoimalasta saatavan taloudellisen hyödyn. Ostamaansa joustokapasiteettia kantaverkkoyhtiö Fingrid käyttää sähköenergiajärjestelmän tehotasapainon hallintaan. Virtuaalivoimalan ohjaus tapahtuu automaattisesti ja sitä voidaan ohjata esimerkiksi sähköverkon taajuuden mukaan.\parencite{fingrid}
+  Virtuaalivoimala on yksi tapa toteuttaa kysyntäjoustoa. Virtuaalivoimala koostuu pienistä sähköä tuottavista yksiköistä tai yhdestä tai useammasta kuormasta, joiden tehonkulutusta ohjataan yhtenä yksikkönä. Virtuaalivoimalan omistaja myy sähkömarkkinoille joustokapasiteettia. Suuren sähkönkulutuksen aikana kantaverkkoyhtiö maksaa virtuaalivoimalaoperaattorille siitä, että voimalaan kuuluvissa kiinteistöissä tai muissa kulutuskohteissa vähennetään sähkön käyttöä hetkellisesti. Vastaavasti ylituotantotilanteessa kantaverkkoyhtiö voi ostaa virtuaalivoimalalta kulutusta vastaamaan sen hetkistä tuotantoa. Reservimarkkinoiden hinnat siis määrävät virtuaalivoimalasta saatavan taloudellisen hyödyn. Ostamaansa joustokapasiteettia kantaverkkoyhtiö Fingrid käyttää sähköenergiajärjestelmän tehotasapainon hallintaan. Virtuaalivoimalan ohjaus tapahtuu automaattisesti ja sitä voidaan ohjata esimerkiksi sähköverkon taajuuden mukaan.\parencite{fingrid}
 
   Osa virtaaalivoimalan ympäristömerkityksestä koostuu siitä, ettei erillistä sähköntuotantolaitteistoa tarvitse rakentaa, vaan toiminta perustuu olemassa olevan tai tarpeeseen rakennettavan laitteiston lisähyödyntämiseen. Mikäli virtuaalivoimala koostuu kulutustaan vähentävistä yksiköistä, ei fingridin voimalaitoksille tarkoitetut verkkoonliittymismääräykset ole päteviä\parencite{VJV2018}.
 
@@ -50,7 +50,7 @@ Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai ni
 
   Kotitalouksien aurinkosähköjärjestelmistä koostuva virtuaalivoimala perustuu akullisten järjestelmien tuottamaan joustoon. Järjestelmässä olevien akkujen ei tarvitse olla kovinkaan suuria, jos niiden määrä sähköjärjestelmässä on suuri. Tällöin voidaan ohjata hyvinkin suurta määrää erittäin nopeasti säätyvää tehoa. Akkujen korkea hinta luo tosin korkean kynnyksen hankinnalle, varsinkin kun kuluttajan saamat hyödyt ei välttämättä ole kovinkaan suuret. Tämän sovelluksen käyttöä rajoittaa kommunikaatiorajapintojen monimutkaisuus samalla tavalla kuin aurinkosähköjärjestelmien etähallintaa; virtuaalivoimalaa hallinnoiva aggregaatti tarvitsee kommunikaatiorajapinnan jokaiseen kohteeseen, sillä nykyisellään sitä ei verkonhaltijalla ole. Tämä on tosin mahdollista toteuttaa, jos virtuaalivoimaloille saataisiin standardoitua rajapinta, sillä silloin valmistajat voisivat integroida tämän rajapinnan heidän omaan verkkopalveluun, eikä järjestelmä vaatisi tällöin fyysisiä muutoksia ollenkaan.
 
-  Lämpöpumpuista koostuvalle virtuaalivoimalalle ominaista on nimenomaan kulutusjouston myyminen. Virtuaalivoimalan toimiessa osana lämmitysjärjestelmää, käytetään esimerkiksi lämminvesivaraajaa tai kiinteistön rakenteia energiavarastona. Kun Virtuaalivoimalaa käytetään kompensoimaan alituotantoa, kytketään lämpöpumppu, lämmitysvastus tai muu vastaava sähköä kuluttava toiminta pois päältä. Lämmityslaitteiden poiskytkemisaika on yleensä maksimissaa muutamia tunteja, minkä ansiosta lämmitettävä kiinteistö tai kohde ei ehdi jäähtymään merkittävästi, eikä esimerkiksi asumismukavuudesta tarvitse tinkiä. Kun taas kompensoidaan ylituotantoa, voidaan esimerkiksi lämpöpumppuja käyttää maksimitehollaan, kunnes lämminvesivaraaja, kiertovesi tai sisäilma saavuttaa asetetun maksimilämpötilansa. Lämpöpuppujen kompressoreiden lisäksi myös lisälämmitysvastuksia voidaan käyttää, jolloin käytetty sähköteho saatta olla jopa kaksinkertainen.
+  Lämpöpumpuista koostuvalle virtuaalivoimalalle ominaista on nimenomaan kulutusjouston myyminen. Virtuaalivoimalan toimiessa osana lämmitysjärjestelmää, käytetään esimerkiksi lämminvesivaraajaa tai kiinteistön rakenteia energiavarastona. Kun virtuaalivoimalaa käytetään kompensoimaan alituotantoa, kytketään lämpöpumppu, lämmitysvastus tai muu vastaava sähköä kuluttava toiminta pois päältä. Lämmityslaitteiden poiskytkemisaika on yleensä maksimissaan muutamia tunteja, minkä ansiosta lämmitettävä kiinteistö tai kohde ei ehdi jäähtymään merkittävästi, eikä esimerkiksi asumismukavuudesta tarvitse tinkiä. Kun taas kompensoidaan ylituotantoa, voidaan esimerkiksi lämpöpumppuja käyttää maksimitehollaan, kunnes lämminvesivaraaja, kiertovesi tai sisäilma saavuttaa asetetun maksimilämpötilansa. Lämpöpuppujen kompressoreiden lisäksi myös lisälämmitysvastuksia voidaan käyttää, jolloin käytetty sähköteho saattaa olla jopa kaksinkertainen.
 
 \subsection{Huipputehon rajoittaminen}
 
@@ -58,11 +58,11 @@ Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai ni
 
   Rajoittamalla johdolla syötetyn alueen huipputehoja, saatetaan välttää uusien yhteyksien rakentaminen. Siirtojohdolla tapahtuvat jännitehäviöt ovat myös suurimmillaan suurimman tehonkulutuksen aikana, joten rajoittamalla huipputehoja, pystytään alentamaan johdolla tapahtuvia häviöitä.
 
-  Sopivan lämpöpumppupoolin ohjauksella voidaan alentaa muuntopiirin tai syötetyn alueen huipputehoa. Riippuen alueesta, lämpöpumput ovat hyvä valinta ohjattavaksi kuormaksi. Uusilla rakennettavilla asuinaueilla, missä kaukolämpö ei ole käytössä, on todennäköisesti suurimmassa osassa asuinrakennuksia lämpöpumppu. Myöskin vanhaa rakennuskantaa peruskorjattaessa lämpöpumput valitaan usein lämmitysjärjestelmän osaksi. Normaalissa omakotitalossa lämpöpumppu on todennäköisesti suurin yksittäinen sähköä kuluttava laite, mikä tekee siitä edelleen hyvän valinnan ohjattavaksi kuormaksi.
+  Sopivan lämpöpumppupoolin ohjauksella voidaan alentaa muuntopiirin tai syötetyn alueen huipputehoa. Riippuen alueesta, lämpöpumput ovat hyvä valinta ohjattavaksi kuormaksi. Uusilla rakennettavilla asuinalueilla, missä kaukolämpö ei ole käytössä, on todennäköisesti suurimmassa osassa asuinrakennuksia lämpöpumppu. Myöskin vanhaa rakennuskantaa peruskorjattaessa lämpöpumput valitaan usein lämmitysjärjestelmän osaksi. Normaalissa omakotitalossa lämpöpumppu on todennäköisesti suurin yksittäinen sähköä kuluttava laite, mikä tekee siitä edelleen hyvän valinnan ohjattavaksi kuormaksi.
 
-  Lämpöpumppupoolin ohjuksesta on myös hyötyä hieman pidemmän sähkökatkon yhteydessä. Sähkökatkon kestäessä hieman pidempään, kylmenevät lämpöpumppujen lämmittämät kohteet. Näin ollen sähköjen palatessa, käytännössä kaikki muuntopiirin lämpöpumput käynnistyvät samaan aikaan. Mikäli kaikki tai osa lämpöpumpuista on varustettu suoraan verkkojännitteeseen kytketyllä oikosulkumoottorilla, voi niiden yhteenlaskettu käynnistysvirtapiikin aikainen tehon kulutus olla huomattavan korkea. Mikäli lämpöpumppujen rajapinnat mahdollistavat yksittäisten lämpöpumppujen ohjaamisen keskitetysti, voidaan sähköjen takaisinkytkeytymisen aiheuttamaan kulutuspiikkiä tasoittaa.
+  Lämpöpumppupoolin ohjauksesta on myös hyötyä hieman pidemmän sähkökatkon yhteydessä. Sähkökatkon kestäessä hieman pidempään, kylmenevät lämpöpumppujen lämmittämät kohteet. Näin ollen sähköjen palatessa, käytännössä kaikki muuntopiirin lämpöpumput käynnistyvät samaan aikaan. Mikäli kaikki tai osa lämpöpumpuista on varustettu suoraan verkkojännitteeseen kytketyllä oikosulkumoottorilla, voi niiden yhteenlaskettu käynnistysvirtapiikin aikainen tehon kulutus olla huomattavan korkea. Mikäli lämpöpumppujen rajapinnat mahdollistavat yksittäisten lämpöpumppujen ohjaamisen keskitetysti, voidaan sähköjen takaisinkytkeytymisen aiheuttamaan kulutuspiikkiä tasoittaa.
 
-  Voidaan myös ajatella, etteivät lämpöpumput ole kaikkein kriittisimpiä syötettviä kohteita. Mikäli sähköpulan takia on tarpeen rajoittaa kulutusta, on hyvä, jos kuitenkin pystytään takaamaan kriittiset toiminnot, kuten valaistus, kunnallistekniikan toiminta tai kylmälaitteiden käynti. Suomessa useimmissa omakotitaloissa on kuitenkin edelleen tulisija, jolloin lämpöpumppujen jatkuva päälläolo ei ole välttämätöntä lyhyillä, muutaman vuorokauden aikaväleillä. Mikäli sähköpulan aikana voidaan keskitetysti rajoittaa lämpöpuppujen käyttöä, saateetaan vähentää tarvetta alueiden kokonaan jännitteettömiksi kytkemiseen.
+  Voidaan myös ajatella, etteivät lämpöpumput ole kaikkein kriittisimpiä syötettäviä kohteita. Mikäli sähköpulan takia on tarpeen rajoittaa kulutusta, on hyvä, jos kuitenkin pystytään takaamaan kriittiset toiminnot, kuten valaistus, kunnallistekniikan toiminta tai kylmälaitteiden käynti. Suomessa useimmissa omakotitaloissa on kuitenkin edelleen tulisija, jolloin lämpöpumppujen jatkuva päällä oleminen ei ole välttämätöntä lyhyillä, muutaman vuorokauden aikaväleillä. Mikäli sähköpulan aikana voidaan keskitetysti rajoittaa lämpöpuppujen käyttöä, saatetaan vähentää tarvetta alueiden kokonaan jännitteettömiksi kytkemiseen.
 
 \section{Aurinkosähkön kustannustehokas hyödyntäminen}
 
@@ -70,23 +70,23 @@ Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai ni
 
   Monissa inverttereissä on mahdollista ohjata erilaisia kuormanohjausreleitä ohjaussignaaleilla. Tällaisia ohjausmahdollisuuksia ei kuitenkaan usein ole suoraan invertterissä, vaan ne on toteutettu modulaarisena komponenttina, joka voidaan ostaa ja asentaa invertteriin erikseen. Ohjaussignaaleita voidaan antaa eri kriteereillä, esimerkiksi aktivoida signaali määrätyn tuottotehon ylittyessä ja deaktivoida se, kun tietty tehotaso alittuu. Tällä tavalla voidaan ohjata esimerkiksi lämpöpumppua tai lämminvesivaraajan vastusta, jotta sähkö saadaan varastoitua lämpöenergiana.
 
-  Aurinkoinvertterissä ei itsessään kuitenkaan ole reaaliaikaista energiamittausta, eikä nykyisissä verkonhaltijan energiamittareissa ole reaaliaikasta mittausta, jota invertteri tai kodin automaatiojärjestelmä voisi hyödyntää. Reaaliaikanen mittaus saadaan erillisellä energiamittarilla, tai tulevaisuudessa seuraavan sukupolven AMI-mittareilla. Reaaliaikainen mittaus mahdollistaa sähkön nettomittauksen, jolloin esimerkiksi varaajasta voidaan aktivoida vain sen vaiheen lämmitysvastus, josta sähköä on siirtymässä verkon suuntaan.
+  Aurinkoinvertterissä ei itsessään kuitenkaan ole reaaliaikaista energiamittausta, eikä nykyisissä verkonhaltijan energiamittareissa ole reaaliaikasta mittausta, jota invertteri tai kodin automaatiojärjestelmä voisi hyödyntää. Reaaliaikainen mittaus saadaan erillisellä energiamittarilla, tai tulevaisuudessa seuraavan sukupolven AMI-mittareilla. Reaaliaikainen mittaus mahdollistaa sähkön nettomittauksen, jolloin esimerkiksi varaajasta voidaan aktivoida vain sen vaiheen lämmitysvastus, josta sähköä on siirtymässä verkon suuntaan.
 
 \section{Loistehon kompensointi}
   Aurinkoinverttereissä, joissa on verkkoa tukevia ominaisuuksia, on usein myös automaattinen loistehon kompensaatio. Tällöin tuotantoaikana loisteho säätyy jännitteen funktiona automaattisesti, ja siten tukee verkkoa ali- tai ylijännitetilanteissa.
 
-  Osa inverttereistä pystyy tuottamaan jopa 100\%:a nimellistehostaan loistehona myös tuottoajan ulkopuolella. Tämä voidaan tehdä joko erillisellä asetusarvolla, tai monitoroimalla liityntäpisteen tehokerrointa automaattisesti ja siten säätämällä liityntäpisteen tehokerroin lähelle optimaalista 1.00:aa. Tämä mahdollistaa sen, että loistehon kompensoinnin tarve voidaan tyydyttää esimerkiksi tuotantolaitoksissa kokonaan aurinkosähköjärjestelmän avulla, eikä erillisiä kompensaatiolaitteistoja tarvita. Tämä lisää huomattavasti investoinnin kannattavuutta, mikäli tuotantolaitoksessa jouduttaisiin tuotantolaitteiden takia muutenkin kompensoimaan loistehoa loistehotariffin välttämiseksi.
+  Osa inverttereistä pystyy tuottamaan jopa 100\%:a nimellistehostaan loistehona myös tuottoajan ulkopuolella. Tämä voidaan tehdä joko erillisellä asetusarvolla, tai monitoroimalla liityntäpisteen tehokerrointa automaattisesti ja siten säätämällä liityntäpisteen tehokerroin lähelle optimaalista arvoa 1. Tämä mahdollistaa sen, että loistehon kompensoinnin tarve voidaan tyydyttää esimerkiksi tuotantolaitoksissa kokonaan aurinkosähköjärjestelmän avulla, eikä erillisiä kompensaatiolaitteistoja tarvita. Tämä lisää huomattavasti investoinnin kannattavuutta, mikäli tuotantolaitoksessa jouduttaisiin tuotantolaitteiden takia muutenkin kompensoimaan loistehoa loistehotariffin välttämiseksi.
 
 \section{Haasteet sovelluksissa}
 
   Rajapinnat ja niitä hyödyntävät sovellukset tuovat haasteita ja mahdollisia haittavaikutuksia. Kuten monesti uuden tekniikan käyttöönottoon liittyy, turvallisuusnäkökulma saattaa jäädä aluksi huomioimatta. Osa haasteista saattaa taas ilmetä vasta testattaessa tekniikoita käytännössä tai kun niiden käyttö alkaa olemaan laajalle levinnyttä.
 
-  Lämpöpumppuja kytketään verkkoon, jotta käyttäjät voivat etäohjata sitä tai jotta sitä voidaan ohjata agregaattorin toimesta osana lämpöpumppupoolia. Erään riskityypin muodostavat vahingossa tai huolimattomuuttaan avoimeksi jätetyt ohjausrajapinnat. TCP-portteja voi olla avoinna niin, että kolmas osapuoli voi koittaa avata telnet- tai ssh-yhteyksiä laitteeseen. Mikäli yhteyden saa avattua käyttäen vakiokäyttäjätunnuksia ja -salasanoja, tai mahdollisesti täysin ilman tunnistautumista, ovat laitteet käytännössä kenen tahansa käytettävissä.
+  Lämpöpumppuja kytketään verkkoon, jotta käyttäjät voivat etäohjata sitä tai jotta sitä voidaan ohjata aggregaattorin toimesta osana lämpöpumppupoolia. Erään riskityypin muodostavat vahingossa tai huolimattomuuttaan avoimeksi jätetyt ohjausrajapinnat. TCP-portteja voi olla avoinna niin, että kolmas osapuoli voi koittaa avata telnet- tai ssh-yhteyksiä laitteeseen. Mikäli yhteyden saa avattua käyttäen vakiokäyttäjätunnuksia ja -salasanoja, tai mahdollisesti täysin ilman tunnistautumista, ovat laitteet käytännössä kenen tahansa käytettävissä.
 
   Jos laitteisiin otetaan yhteyttä salaamattomilla protokollilla, voidaan ohjausliikenteestä kerätä tietoja, joiden päätyminen ulkopuolisten käsiin ei ole haluttua. Mahdollisia kerättäviä tietoja voivat olla esimerkiksi asukkaan läsnäolo tai tieto peseytymisajoista, joiden vuotaminen ulkopuolisille voi vaikuttaa vähintääkin turvallisuudentunteeseen. Ammattimainen rikollisuus voi myös käyttää näitä tietoja rikosten suunnitteluun, sillä tiedoilla pystyy määrittämään hyvinkin tarkasti, milloin koti on tyhjillään ja haavoittumaisimmillaan.
 
-  Kaapattujen eli luvatta etäohjattujen laitteiden väärinkäyttöön on monia tapoja. Pumppujen voidaan esimerkiksi ohjata tuottamaan omistajilleen ylimääräisiä kuluja tai vaihtamaan asunnon lämpötila täysin vääräksi. Mikäli lämpöpumpun yhteydessä on sulautettuna järjestelmänä esimerkiksi jokin linux- tai windows-käyttöjärjestelmä ohjaamassa pumpun toimintaa, pätevät siihen samat uhkakuvat kuin normaalin kotitietokoneen haltuunnottamiseen. Jos kolmas osapuoli kykenee asentamaan lämpöpumppua ohjaavaan tietokoneeseen omia ohjelmiaan, sitä voidaan käyttää vahingollisiin tarkoituksiin esimerkiksi hajautetun palvelunestohyökkäyksen toteuttamisessa.
+  Kaapattujen eli luvatta etäohjattujen laitteiden väärinkäyttöön on monia tapoja. Pumppujen voidaan esimerkiksi ohjata tuottamaan omistajilleen ylimääräisiä kuluja tai vaihtamaan asunnon lämpötila täysin vääräksi. Mikäli lämpöpumpun yhteydessä on sulautettuna järjestelmänä esimerkiksi jokin linux- tai windows-käyttöjärjestelmä ohjaamassa pumpun toimintaa, pätevät siihen samat uhkakuvat kuin normaalin kotitietokoneen haltuunottamiseen. Jos kolmas osapuoli kykenee asentamaan lämpöpumppua ohjaavaan tietokoneeseen omia ohjelmiaan, sitä voidaan käyttää vahingollisiin tarkoituksiin esimerkiksi hajautetun palvelunestohyökkäyksen toteuttamisessa.
 
-  Mikäli kolmannella osapuolella on mahdollisuus käyttää useampaa laitetta yhtäaikaa voidaa laitteita käyttää esimerkiksi häiriöiden tuottamiseen sähköverkossa, muun muassa äkillisen tehomuutoksen luomiseen tai verkon tehokertoimen säätämiseen. Nämä tuottaisivat lisää juuri niitä ongelmia, joiden ratkaisemiseen rajapintojen hyödyntämisellä pyritään.
+  Mikäli kolmannella osapuolella on mahdollisuus käyttää useampaa laitetta yhtä aikaa, voidaan laitteita käyttää esimerkiksi häiriöiden tuottamiseen sähköverkossa, muun muassa äkillisen tehomuutoksen luomiseen tai verkon tehokertoimen säätämiseen. Nämä tuottaisivat lisää juuri niitä ongelmia, joiden ratkaisemiseen rajapintojen hyödyntämisellä pyritään.
 
   Ihmisen turvallisuudentunnetta lisää, kun hänellä on tunne siitä, että asioita voi kontrolloida itse. Kun lämpöpumpun ohjausta halutaan siirtää älykkäässä sähköverkossa kolmansille osapuolille kuten aggregaattoreille, tämä turvallisuudentunne saattaa horjua.
