Added cloud services

--- a/tex/jarjestelmat_sahkon_tuottajina.tex
+++ b/tex/jarjestelmat_sahkon_tuottajina.tex
@@ -9,7 +9,7 @@ Järjestelmä tuottaa energiaa vain tiettyyn aikaan päivästä, ja sen tuottote
 
 Järjestelmän koko, mahdolliset staattiset varjostuskohdat sekä tulevaisuuden laajentamistarpeet vaikuttavat järjestelmän suunnitteluun. Invertterin valinta vaikuttaa laite- ja asennuskustannuksiin sekä järjestelmän päivittäiseen energiantuotantoon, mutta myös järjestelmän turvallisuuteen ja suojalaitteiden tarpeeseen. Inverttereiden eri vaihtoehtoja käsitellään myöhemmin omassa kappaleessaan.
 
-Osa kaupallisista järjestelmistä ylittää 1MW tehon. Tällaisille järjestelmille Fingrid asettaa rajoituksia kommunikaation reaaliaikaisuuden osalta; verkonhaltijan on lähetettävä järjestelmien mittaustietoja enintään 60 sekunnin päivityssyklillä. Tällöin verkonhaltijan vastuulla on toimittaa järjestelmään mittarit täyttääkseen Fingridin vaatimukset reaaliaikaisuudesta. \parencite{VJV2018}
+Lähes kaikki verkon käyttöpaikat ovat verkonhaltijan sähkömittarin takana. Mikäli alle 100kVA:n tehoinen tuotantolaitos sijaitsee sähkönkäyttöpaikalla, jossa on kaksisuuntainen tuntimittauslaite, ei tuotantolaitokselle tarvitse asentaa erillistä mittaria. Muussa tapauksessa tuotantolaitos vaatii erillisen sähkömittarin. Yli 1MW:n järjestelmille Fingrid asettaa rajoituksia kommunikaation reaaliaikaisuuden osalta; verkonhaltijan on lähetettävä järjestelmien mittaustietoja enintään 60 sekunnin päivityssyklillä. \parencite{VJV2018}
 
 \section{Aurinkopaneelit}
   Aurinkopaneeleiden toiminta perustuu valosähköiseen ilmiöön. Ne koostuvat suuresta määrästä sarjaan kytkettyjä aurinkokennoja, joista jokainen tuottaa tyypillisesti täydessä auringonpaisteessa hieman alle 5 W tehon noin 0,5 V jännitteellä. \parencite{Messenger}
