--- a/tex/niko_references.bib
+++ b/tex/niko_references.bib
@@ -193,3 +193,27 @@
 	date         = {2019-03-30},
 	urldate      = {2020-08-25},
 }
+
+@misc{HAN,
+	author       = {Aidon Ltd.},
+	title        = {Aidon HAN Interface Description},
+	url          = {https://www.nek.no/wp-content/uploads/2018/11/Aidon-HAN-Interface-Description-v10A-ID-34331.pdf},
+	date         = {2018-11-08},
+	urldate      = {2020-09-04},
+}
+
+@misc{Aidon5510,
+	author       = {Aidon Ltd.},
+	title        = {Aidon 5510 Fact Sheet},
+	url          = {https://www.jonkopingenergi.se/storage/ma/049ce02769574250bb3862b0f091fdfd/d2b4b7cbb1db489189794a72a44ab4c3/pdf/FE164C6A4E7CA65C23AAFAC594268D9365CDE053/Factsheet_Meter_5510_EN_21.06.2012%20(ID%203028).pdf},
+	date         = {2012-06-21},
+	urldate      = {2020-09-04},
+}
+
+@misc{AMRNykytila,
+	author       = {Niinikoski, Joni},
+	title        = {AMR-mittareiden nykytila ja kehitysmahdollisuudet pohjoismaissa},
+	url          = {http://urn.fi/URN:NBN:fi-fe201801262311},
+	urldate      = {2020-09-04},
+	date         = {2018-01-19},
+}
