--- a/tex/sanasto.tex
+++ b/tex/sanasto.tex
@@ -117,3 +117,8 @@
   name={AMI},
   description={Advanced Metering Infrastructure}
 }
+
+\newglossaryentry{HAN}{
+  name={HAN},
+  description={Home Area Network}
+}
